--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -21,6 +21,7 @@ nav {
     display: flex;
     justify-content: space-between; 
     align-items: center;
+    margin: 0 200px;
 }
 
 .nav-title {
@@ -42,4 +43,18 @@ nav li {
 nav a{
     text-decoration: none;
     color: #474747;
+}
+
+
+/* header related styles */
+.header{
+    background-color: White-Color, #fff;
+}
+.banner{
+    padding: 30px 30px 30px 150px;
+    display: flex;
+    align-items: center;
+}
+.banner .profile-pic{
+    width: 400px;
 }
